--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
   },
   "main": "src/index.js",
   "dependencies": {
-    "1tree": "0.4.13",
+    "1tree": "npm 0.4.13",
     "chalk": "1.1.3",
     "clear": "0.0.1",
     "clui": "0.3.1",
     "figlet": "1.2.0",
     "inquirer": "3.0.5",
     "mathjs": "3.9.3",
+    "memoizee": "0.4.3",
     "numbers": "^0.6.0"
   },
   "devDependencies": {}
