--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "figlet": "1.2.0",
     "inquirer": "3.0.5",
     "mathjs": "3.9.3",
+    "node-rsa": "^0.4.2",
     "numbers": "^0.6.0"
   },
   "devDependencies": {}
