--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "main": "src/index.js",
   "dependencies": {
     "1tree": "0.4.13",
+    "algebra.js": "0.2.6",
     "chalk": "1.1.3",
     "clear": "0.0.1",
     "clui": "0.3.1",
