--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "inquirer": "3.0.5",
     "mathjs": "3.9.3",
     "memoizee": "0.4.3",
+    "ndarray-pack": "^1.2.1",
     "ndarray-scratch": "^1.2.0",
+    "ndarray-unpack": "^1.0.0",
     "numbers": "0.6.0",
     "save-pixels": "2.3.4"
   },
