--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Coding up project",
   "author": "Thibaud Lamarche",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "test" : "mocha"
   },
   "main": "src/index.js",
   "dependencies": {
@@ -18,6 +19,7 @@
     "inquirer": "3.0.5",
     "mathjs": "3.9.3",
     "memoizee": "0.4.3",
+    "mocha": "^3.2.0",
     "ndarray-pack": "^1.2.1",
     "ndarray-scratch": "^1.2.0",
     "ndarray-unpack": "^1.0.0",
