Ajout dépendance pour gérer le son

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ndarray-scratch": "^1.2.0",
     "ndarray-unpack": "^1.0.0",
     "node-fetch": "^1.6.3",
+    "node-wav": "0.0.2",
     "numbers": "0.6.0",
     "save-pixels": "2.3.4",
     "winston": "^2.3.1"
