--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clear": "0.0.1",
     "clui": "0.3.1",
     "figlet": "1.2.0",
+    "form-data": "^2.1.2",
     "get-pixels": "3.3.0",
     "htmlparser": "^1.7.7",
     "inquirer": "3.0.5",
